shipping container sizing bug squashed

--- a/stylesheets/sass/56.scss
+++ b/stylesheets/sass/56.scss
@@ -667,11 +667,13 @@ button.highlight {
 
 .shipping {
     cursor: pointer;
+    font-size: 1em;
 }
 
 .shipping-hover {
     display: none;
     cursor: pointer;
+    font-size: 1em;
 }
 
 .shipping-container {
